--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="C:/Users/xbasu/Documents/Librerias Selenium/libs/guava-25.0-jre.jar"/>
 	<classpathentry kind="lib" path="C:/Users/xbasu/Documents/Librerias Selenium/libs/okhttp-3.11.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/xbasu/Documents/Librerias Selenium/libs/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xbasu/Documents/Librerias externas/testng-6.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
